--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Signup Form</title>
+  </head>
+  <body>
+    <h2>Signup Form</h2>
+    <form action="#" method="POST">
+      <!-- Name Field -->
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Name" required /><br><br>
 
-<html>
+      <!-- Email Field -->
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Email" required /><br><br>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      <!-- Gender Field -->
+      <label>Gender:</label>
+      <input type="radio" id="gender_m" name="gender" value="Male" required />
+      <label for="gender_m">Male</label>
+      <input type="radio" id="gender_f" name="gender" value="Female" required />
+      <label for="gender_f">Female</label><br><br>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+      <!-- Car Brands Field -->
+      <label for="cars">Car Brands:</label>
+      <select id="cars" name="cars" required>
+        <option value="">--Please choose an option--</option>
+        <option value="Toyota">Toyota</option>
+        <option value="Honda">Honda</option>
+        <option value="Ford">Ford</option>
+        <option value="BMW">BMW</option>
+        <option value="Audi">Audi</option>
+      </select><br><br>
 
-</body>
+      <!-- Age Field -->
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" placeholder="Age" required /><br><br>
 
+      <!-- Date of Birth Field -->
+      <label for="dob">Date of Birth:</label>
+      <input type="date" id="dob" name="dob" required /><br><br>
+
+      <!-- Phone Number Field -->
+      <label for="tel">Phone Number:</label>
+      <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx" /><br><br>
+
+      <!-- Password Field -->
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" placeholder="Password" required /><br><br>
+
+      <!-- Terms of Service Checkbox -->
+      <label for="tos">I agree to the TOS</label>
+      <input type="checkbox" id="tos" name="tos" required /><br><br>
+
+      <!-- Submit Button -->
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
